--- a/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
@@ -2,9 +2,10 @@
     <md-toolbar>
         <div class="md-toolbar-tools" style="background-color:rgb(62, 138, 187);">
             <h2>Agregar puesto a la oferta</h2>
+            
             <span flex></span>
             <md-button class="md-icon-button" ng-click="cancel()">
-                <md-icon class="fa fa-times"></md-icon>
+                <a class="fa fa-times"></a>
             </md-button>
         </div>
     </md-toolbar>
