--- a/VLaboralWeb/App/Profesionales/Partials/profesionalesListEmpresa.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalesListEmpresa.html
@@ -12,8 +12,8 @@
                     <ul ng-repeat="valorFiltro in valoresFiltro">
                         <li>
                             <md-checkbox ng-click="setSelectedProfesionales(tipoFiltro, valorFiltro)"
-                                         ng-checked="queryFiltros[tipoFiltro] && queryFiltros[tipoFiltro].indexOf(valorFiltro.id.toString()) >= 0">
-                                {{valorFiltro.descripcion}} ({{valorFiltro.cantidad}})
+                                         ng-checked="queryFiltros[tipoFiltro] && queryFiltros[tipoFiltro].indexOf(valorFiltro.Id.toString()) >= 0">
+                                {{valorFiltro.Descripcion}} ({{valorFiltro.Cantidad}})
                             </md-checkbox>
                         </li>
                     </ul>
@@ -63,11 +63,14 @@
                     </table>
                 </md-table-container>
                 <md-table-pagination md-label="{page: 'Página:', rowsPerPage: 'Filas por página:', of: 'de'}"
-                                     md-limit="pagination.limit"
-                                     md-limit-options="[5, 10, 15]"
-                                     md-page="pagination.current"
-                                     md-total="{{profesionalesList.length - selectedPro.length}}"
+                                     md-limit="queryFiltros.Rows"
+                                     md-limit-options="limitOptions"
+                                     md-page="queryFiltros.Page"
+                                     md-on-paginate="logPaginationProfesionales"
+                                     md-total="{{TotalRows}}"
                                      md-page-select></md-table-pagination>
+                                     <!--md-total="{{profesionalesList.length - selectedPro.length}}"-->
+                                     
 
                 <!--iafar: divisor de prueba-->
                 <md-divider md-inset hide-sm ng-if="!$last"></md-divider>
