--- a/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
@@ -20,9 +20,41 @@
                         </li>                        
                     </ul>
                 </div>                
+
+                <div>
+                    <h3>Buscar por Nombre:</h3>
+                    <ul>
+                        <li>
+                            <div layout="row">
+                                <md-input-container flex class="md-icon-float md-block md-title">
+                                    <label>Oferta</label>
+                                    <input type="text" ng-model="nombreOferta">
+                                </md-input-container>
+                            </div>
+                            <div layout="row">
+                                <md-button class="md-raised" flex ng-click="busquedaNombreOferta(nombreOferta)">
+                                    Buscar
+                                    <md-icon class="material-icons">search</md-icon>
+                                </md-button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
             <div class="lista">
+                <md-toolbar>
+                    <div class="md-toolbar-tools t_list">
+                        <span flex></span>
+                        <md-input-container flex="40">
+                            <label>Ordenar por:</label>
+                            <md-select ng-model="queryFiltros.orderBy" ng-change="ordenOfertasChanged()">
+                                <md-option ng-value="opt" ng-repeat="opt in opcionesFiltrosOfertas.options.orderByOptions">{{ opt }}</md-option>
+                            </md-select>
+                        </md-input-container>
+                    </div>
+                </md-toolbar>
+
                 <md-table-container>
                     <table md-table>
                         <thead md-head>
